@@ -30,6 +30,10 @@ G_BEGIN_DECLS
 guint32  tracker_db_get_new_service_id (TrackerDBInterface *iface);
 void     tracker_db_increment_stats    (TrackerDBInterface *iface,
                                         TrackerService     *service);
+
+guint    tracker_db_check_service      (TrackerDBInterface *iface,
+					const gchar        *path,
+					GHashTable         *metadata);
 gboolean tracker_db_create_service     (TrackerDBInterface *iface,
                                         guint32             id,
                                         TrackerService     *service,
@@ -43,7 +47,7 @@ void     tracker_db_set_metadata       (TrackerDBInterface *iface,
 void     tracker_db_set_text           (TrackerDBInterface *iface,
 					guint32             id,
 					const gchar        *text);
-gboolean tracker_db_create_event       (TrackerDBInterface *iface,
+void     tracker_db_create_event       (TrackerDBInterface *iface,
                                         guint32             service_id,
                                         const gchar        *type);
 
